Sign up panel 2 input fields.

--- a/app/src/main/res/layout/activity_sign_up2.xml
+++ b/app/src/main/res/layout/activity_sign_up2.xml
@@ -1,10 +1,193 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".SignUp2Activity">
+    tools:context=".SignUp2Activity"
+    android:background="@drawable/container_login">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+
+    <!-- Ellipses on the bg -->
+    <ImageView
+        android:id="@+id/img_ellipse1"
+        android:layout_width="257dp"
+        android:layout_height="240dp"
+        android:layout_marginLeft="199dp"
+        android:layout_marginTop="-63dp"
+        android:layout_gravity="top|left"
+        android:background="@drawable/img_ellipse1"
+        android:scaleType="centerInside" />
+
+    <ImageView
+        android:id="@+id/img_ellipse2"
+        android:layout_width="600dp"
+        android:layout_height="450dp"
+        android:layout_marginLeft="-93dp"
+        android:layout_marginTop="550dp"
+        android:layout_gravity="top|left"
+        android:background="@drawable/img_ellipse2"
+        android:scaleType="centerInside" />
+
+    <ImageView
+        android:id="@+id/img_ellipse3"
+        android:layout_width="284dp"
+        android:layout_height="273dp"
+        android:layout_marginLeft="180dp"
+        android:layout_marginTop="700dp"
+        android:layout_gravity="top|left"
+        android:background="@drawable/img_ellipse3"
+        android:scaleType="centerInside" />
+
+    <!-- PickPal Logo  -->
+    <ImageView
+        android:id="@+id/image_pick_pal_logo"
+        android:layout_width="55dp"
+        android:layout_height="55dp"
+        android:layout_gravity="left"
+        android:layout_marginLeft="360dp"
+        android:layout_marginTop="2dp"
+        android:layout_marginBottom="729dp"
+        android:scaleType="centerInside"
+        android:src="@drawable/pickpal_logo" />
+
+    <!--back button-->
+    <ImageView
+        android:id="@+id/back_button"
+        android:layout_width="34.13dp"
+        android:layout_height="33.45dp"
+        android:layout_marginLeft="15dp"
+        android:layout_marginTop="18dp"
+        android:layout_gravity="top|left"
+        android:scaleType="centerInside"
+        android:src="@drawable/img_back_button" />
+
+    <!-- Sign Up Text -->
+    <TextView
+        android:id="@+id/signup_header"
+        android:layout_width="match_parent"
+        android:layout_height="58dp"
+        android:layout_marginLeft="19dp"
+        android:layout_marginTop="224dp"
+        android:layout_marginBottom="518dp"
+        android:gravity="left|center_vertical"
+        android:includeFontPadding="false"
+        android:maxLines="1"
+        android:singleLine="true"
+        android:text="Sign Up!"
+        android:fontFamily="@font/poppins_bold"
+        android:textColor="#FFFFFFFF"
+        android:textSize="35dp" />
+
+    <TextView
+        android:id="@+id/signup_subheader"
+        android:layout_width="wrap_content"
+        android:layout_height="40dp"
+        android:layout_marginLeft="25dp"
+        android:layout_marginTop="265dp"
+        android:layout_gravity="top|left"
+        android:gravity="left|center_vertical"
+        android:includeFontPadding="false"
+        android:lineHeight="40dp"
+        android:maxLines="1"
+        android:text="Hey Pal! Let's get started"
+        android:fontFamily="@font/poppins_regular"
+        android:textColor="#FFFFFFFF"
+        android:textSize="15dp" />
+
+    <!-- Input Fields -->
+    <LinearLayout
+        android:id="@+id/container_inputFields"
+        android:layout_width="330.12dp"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="25dp"
+        android:layout_marginTop="318dp"
+        android:orientation="vertical">
+
+    <TextView
+        android:id="@+id/label_birthday"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:gravity="start"
+        android:includeFontPadding="false"
+        android:maxLines="1"
+        android:text="Birthday"
+        android:fontFamily="@font/poppins_semibold"
+        android:textColor="#FFFFFFFF"
+        android:textSize="15sp" />
+
+    <FrameLayout
+        android:id="@+id/container_birthday_box"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="5dp"
+        android:layout_marginBottom="10dp"
+        android:background="@drawable/container_input_box">
+
+        <ImageView
+            android:id="@+id/birthday_box"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@drawable/input_box"
+            android:scaleType="centerCrop" />
+
+        <EditText
+            android:id="@+id/birthday"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="20dp"
+            android:layout_gravity="start"
+            android:gravity="start|center_vertical"
+            android:includeFontPadding="false"
+            android:maxLines="1"
+            android:singleLine="true"
+            android:hint="Select your birthday"
+            android:inputType="date"
+            android:fontFamily="@font/poppins_regular"
+            android:textColor="#FF000000"
+            android:textSize="17sp" />
+
+    </FrameLayout>
+        <TextView
+            android:id="@+id/label_gender"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="start"
+            android:includeFontPadding="false"
+            android:maxLines="1"
+            android:text="Gender"
+            android:fontFamily="@font/poppins_semibold"
+            android:textColor="#FFFFFFFF"
+            android:textSize="15sp" />
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="5dp">
+
+            <Spinner
+                android:id="@+id/spinner_gender"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:spinnerMode="dropdown"
+                android:entries="@array/gender_array"
+                android:background="@drawable/spinner_background"
+                android:padding="12dp"
+                android:fontFamily="@font/poppins_regular"
+                android:textColor="#797373"
+                android:textSize="17sp" />
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentEnd="true"
+                android:layout_centerVertical="true"
+                android:layout_marginEnd="10dp"
+                android:src="@drawable/ic_dropdown" />
+        </RelativeLayout>
+
+    </LinearLayout>
+
+</FrameLayout>
