--- a/app/src/main/res/layout/activity_sign_up2.xml
+++ b/app/src/main/res/layout/activity_sign_up2.xml
@@ -190,4 +190,20 @@
 
     </LinearLayout>
 
+    <!-- Next Button -->
+    <Button
+        android:id="@+id/btn_next"
+        android:layout_width="120dp"
+        android:layout_height="43dp"
+        android:layout_marginRight="57dp"
+        android:layout_marginTop="680dp"
+        android:layout_gravity="right"
+        android:background="@drawable/img_rectangle"
+        android:fontFamily="@font/poppins_bold"
+        android:gravity="center"
+        android:text="Next"
+        android:textAllCaps="false"
+        android:textColor="#FFEF7035"
+        android:textSize="25dp" />
+
 </FrameLayout>
