forgot password functionality. use dummy otp

--- a/app/src/main/res/layout/activity_forgot_password3.xml
+++ b/app/src/main/res/layout/activity_forgot_password3.xml
@@ -62,46 +62,47 @@
         android:scaleType="centerInside"
         android:src="@drawable/img_back_button" />
 
-    <!-- Sign Up Text -->
+    <!-- Set a New Password -->
     <TextView
-        android:id="@+id/signup_header"
+        android:id="@+id/header"
         android:layout_width="match_parent"
         android:layout_height="58dp"
         android:layout_marginLeft="19dp"
-        android:layout_marginTop="224dp"
+        android:layout_marginTop="200dp"
         android:layout_marginBottom="518dp"
         android:gravity="left|center_vertical"
         android:includeFontPadding="false"
         android:maxLines="1"
         android:singleLine="true"
-        android:text="Sign Up!"
+        android:text="Set a New Password"
         android:fontFamily="@font/poppins_bold"
         android:textColor="#FFFFFFFF"
-        android:textSize="35dp"
+        android:textSize="30dp"
         android:shadowColor="#000000"
         android:shadowRadius="10"
         android:shadowDx="8"
-        android:shadowDy="3"/>
+        android:shadowDy="3" />
 
     <TextView
-        android:id="@+id/signup_subheader"
+        android:id="@+id/subheader1"
         android:layout_width="wrap_content"
-        android:layout_height="40dp"
+        android:layout_height="wrap_content"
         android:layout_marginLeft="25dp"
-        android:layout_marginTop="265dp"
+        android:layout_marginTop="250dp"
+        android:layout_marginRight="100dp"
         android:layout_gravity="top|left"
         android:gravity="left|center_vertical"
         android:includeFontPadding="false"
-        android:lineHeight="40dp"
-        android:maxLines="1"
-        android:text="Hey Pal! Let's get started"
+        android:maxLines="3"
+        android:lineSpacingExtra="3dp"
+        android:text="Please make sure it’s unique and different from your previous ones for added security."
         android:fontFamily="@font/poppins_regular"
         android:textColor="#FFFFFFFF"
         android:textSize="15dp"
         android:shadowColor="#000000"
         android:shadowRadius="10"
         android:shadowDx="0"
-        android:shadowDy="4"/>
+        android:shadowDy="4" />
 
     <!-- Input Fields -->
     <LinearLayout
@@ -109,17 +110,17 @@
         android:layout_width="330.12dp"
         android:layout_height="wrap_content"
         android:layout_marginLeft="25dp"
-        android:layout_marginTop="318dp"
+        android:layout_marginTop="340dp"
         android:orientation="vertical">
 
         <TextView
-            android:id="@+id/label_password"
+            android:id="@+id/label_NewPassword"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:gravity="start"
             android:includeFontPadding="false"
             android:maxLines="1"
-            android:text="Password"
+            android:text="New Password"
             android:fontFamily="@font/poppins_semibold"
             android:textColor="#FFFFFFFF"
             android:textSize="15sp" />
@@ -132,7 +133,7 @@
             android:layout_gravity="top|left">
 
             <FrameLayout
-                android:id="@+id/container_password"
+                android:id="@+id/container_new_password"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:background="@drawable/container_group2">
@@ -186,7 +187,7 @@
             android:id="@+id/label_confirm_password"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="5dp"
+            android:layout_marginTop="15dp"
             android:gravity="start"
             android:includeFontPadding="false"
             android:maxLines="1"
@@ -254,54 +255,21 @@
 
     </LinearLayout>
 
-    <!-- User Agreement Policy -->
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="480dp"
-        android:layout_marginLeft="30dp"
-        android:orientation="horizontal">
-
-        <!-- Checkbox for User Agreement -->
-        <CheckBox
-            android:id="@+id/checkbox_agreement"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:buttonTint="@color/white" />
-
-        <!-- User Agreement Policy Text -->
-        <TextView
-            android:id="@+id/login_prompt"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="8dp"
-            android:gravity="center_vertical"
-            android:text="Agree the terms of use and privacy policy"
-            android:fontFamily="@font/poppins_regular"
-            android:textColor="#FFFFFFFF"
-            android:textSize="13dp"
-            android:shadowColor="#000000"
-            android:shadowRadius="10"
-            android:shadowDx="0"
-            android:shadowDy="4"/>
-    </LinearLayout>
-
-    <!-- Sign Up Button -->
+    <!-- Update Password Button -->
     <Button
-        android:id="@+id/btn_signup"
-        android:layout_width="150dp"
+        android:id="@+id/btn_update_password"
+        android:layout_width="246dp"
         android:layout_height="43dp"
-        android:layout_marginRight="57dp"
-        android:layout_marginTop="690dp"
-        android:layout_gravity="right"
+        android:layout_marginLeft="70dp"
+        android:layout_marginTop="550dp"
+        android:layout_gravity="top|left"
         android:background="@drawable/img_rectangle"
+        android:textAllCaps="false"
         android:fontFamily="@font/poppins_bold"
         android:gravity="center"
-        android:text="Sign Up"
-        android:textAllCaps="false"
+        android:text="Update Password"
         android:textColor="#FFEF7035"
         android:textSize="20dp" />
-
 
 </FrameLayout>
 
