--- a/app/src/main/res/layout/activity_password_reset.xml
+++ b/app/src/main/res/layout/activity_password_reset.xml
@@ -52,28 +52,19 @@
         android:scaleType="centerInside"
         android:src="@drawable/pickpal_logo" />
 
-    <!--Account Created Element-->
-    <ImageView
-        android:id="@+id/image_account_created"
-        android:layout_width="460dp"
-        android:layout_height="380dp"
-        android:layout_marginTop="140dp"
-        android:layout_marginLeft="-20dp"
-        android:scaleType="centerCrop"
-        android:src="@drawable/account_created" />
 
-    <!-- Account Created Text -->
+    <!-- Password Updated Text -->
     <TextView
         android:id="@+id/header1"
         android:layout_width="match_parent"
         android:layout_height="58dp"
         android:layout_marginLeft="35dp"
-        android:layout_marginTop="450dp"
+        android:layout_marginTop="260dp"
         android:gravity="left|center_vertical"
         android:includeFontPadding="false"
         android:maxLines="2"
         android:singleLine="true"
-        android:text="Account"
+        android:text="Password"
         android:fontFamily="@font/poppins_bold"
         android:textColor="#FFFFFFFF"
         android:textSize="40dp"
@@ -86,7 +77,7 @@
         android:layout_width="match_parent"
         android:layout_height="58dp"
         android:layout_marginLeft="35dp"
-        android:layout_marginTop="490dp"
+        android:layout_marginTop="300dp"
         android:gravity="left|center_vertical"
         android:includeFontPadding="false"
         android:maxLines="2"
@@ -104,12 +95,12 @@
         android:layout_width="match_parent"
         android:layout_height="58dp"
         android:layout_marginLeft="35dp"
-        android:layout_marginTop="530dp"
+        android:layout_marginTop="340dp"
         android:gravity="left|center_vertical"
         android:includeFontPadding="false"
         android:maxLines="2"
         android:singleLine="true"
-        android:text="created!"
+        android:text="Updated!"
         android:fontFamily="@font/poppins_bold"
         android:textColor="#FFFFFFFF"
         android:textSize="40dp"
@@ -123,23 +114,24 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="35dp"
-        android:layout_marginTop="590dp"
+        android:layout_marginRight="50dp"
+        android:layout_marginTop="400dp"
         android:gravity="left|center_vertical"
         android:includeFontPadding="false"
-        android:maxLines="2"
-        android:text="You’re all set! Start creating polls and making choices with your pals!"
+        android:maxLines="3"
+        android:text="Your password has been successfully changed. Use your new password to login"
         android:fontFamily="@font/poppins_semibold"
         android:textColor="#CBCBE7"
         android:textSize="15sp"
-         />
-    
+        />
+
     <!--Login Button -->
     <Button
         android:id="@+id/btn_login"
-        android:layout_width="221dp"
+        android:layout_width="240dp"
         android:layout_height="50dp"
         android:layout_marginLeft="90dp"
-        android:layout_marginTop="660dp"
+        android:layout_marginTop="480dp"
         android:background="@drawable/ca_login_button"
         android:gravity="center"
         android:text="Proceed to Login"
