--- a/app/src/main/res/layout/activity_sign_up1.xml
+++ b/app/src/main/res/layout/activity_sign_up1.xml
@@ -77,7 +77,11 @@
         android:text="Sign Up!"
         android:fontFamily="@font/poppins_bold"
         android:textColor="#FFFFFFFF"
-        android:textSize="35dp" />
+        android:textSize="35dp"
+        android:shadowColor="#000000"
+        android:shadowRadius="10"
+        android:shadowDx="8"
+        android:shadowDy="3"/>
 
     <TextView
         android:id="@+id/signup_subheader"
@@ -93,7 +97,11 @@
         android:text="Hey Pal! Let's get started"
         android:fontFamily="@font/poppins_regular"
         android:textColor="#FFFFFFFF"
-        android:textSize="15dp" />
+        android:textSize="15dp"
+        android:shadowColor="#000000"
+        android:shadowRadius="10"
+        android:shadowDx="0"
+        android:shadowDy="4"/>
 
     <!-- Input Fields -->
     <LinearLayout
@@ -303,7 +311,11 @@
         android:text="Already a user?"
         android:fontFamily="@font/poppins_regular"
         android:textColor="#FFFFFFFF"
-        android:textSize="13dp" />
+        android:textSize="13dp"
+        android:shadowColor="#000000"
+        android:shadowRadius="10"
+        android:shadowDx="0"
+        android:shadowDy="4"/>
 
     <TextView
         android:id="@+id/login_link"
@@ -318,7 +330,11 @@
         android:text="Login!"
         android:fontFamily="@font/poppins_bold"
         android:textColor="#FFFFFFFF"
-        android:textSize="13dp" />
+        android:textSize="13dp"
+        android:shadowColor="#000000"
+        android:shadowRadius="10"
+        android:shadowDx="0"
+        android:shadowDy="4"/>
 
     <!-- Next Button -->
     <Button
