--- a/app/src/main/res/layout/poll_item.xml
+++ b/app/src/main/res/layout/poll_item.xml
@@ -152,7 +152,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:background="@drawable/dismiss_button"
+            android:background="@drawable/mod_dashb_btn_bg"
             android:layout_marginStart="35dp"
             android:layout_marginEnd="35dp"
             android:minHeight="40dp"
