--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,4 +11,5 @@
     <color name="gray">#544C4C</color>
     <color name="lightgray">#F7F7F7</color>
     <color name="grey">#F5F5F5</color>
+    <color name="middlegray">#939799</color>
 </resources>
