view singular post

--- a/app/src/main/res/layout/poll_item_images.xml
+++ b/app/src/main/res/layout/poll_item_images.xml
@@ -222,7 +222,7 @@
         android:orientation="horizontal">
 
         <Button
-            android:id="@+id/vote_button"
+            android:id="@+id/btn_vote"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
