--- a/app/src/main/res/layout/fragment_view_post.xml
+++ b/app/src/main/res/layout/fragment_view_post.xml
@@ -7,9 +7,11 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="#FFFFFF">
+    android:background="#FFFFFF"
+    android:paddingBottom="10dp"
+    tools:context=".ViewPostFragment">
 
-    <!-- Back Button -->
+    <!-- Back Button and Header (Fixed at the top) -->
     <ImageButton
         android:id="@+id/btn_back"
         android:layout_width="wrap_content"
@@ -37,6 +39,7 @@
         android:textSize="16sp"
         android:fontFamily="@font/poppins_bold"/>
 
+    <!-- Post Content (Fixed at the top) -->
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -45,13 +48,13 @@
         android:layout_marginLeft="15dp">
 
         <ImageView
-        android:id="@+id/container_icon"
-        android:layout_width="45.39dp"
-        android:layout_height="45.39dp"
-        android:scaleType="centerCrop"
-        android:src="@drawable/user_pic"
-        android:background="@drawable/circle"
-        android:clipToOutline="true" />
+            android:id="@+id/container_icon"
+            android:layout_width="45.39dp"
+            android:layout_height="45.39dp"
+            android:scaleType="centerCrop"
+            android:src="@drawable/user_pic"
+            android:background="@drawable/circle"
+            android:clipToOutline="true" />
 
         <LinearLayout
             android:layout_width="0dp"
@@ -172,29 +175,60 @@
         android:textSize="20sp"
         android:fontFamily="@font/poppins_semibold"/>
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recycler_view_comments"
+    <!-- ScrollView wrapping the scrollable section -->
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:layout_marginLeft="20dp"
-        android:clipToPadding="false"
-        android:paddingBottom="16dp"/>
+        android:layout_height="0dp"
+        android:layout_weight="1">
 
-    <Button
-        android:id="@+id/btn_comment"
-        android:layout_width="200dp"
-        android:layout_height="wrap_content"
-        android:background="@drawable/purple_rectangle"
-        android:gravity="center"
-        android:layout_gravity="center"
-        android:includeFontPadding="false"
-        android:text="Leave a comment"
-        android:textColor="#FFFFFFFF"
-        android:textSize="12sp"
-        android:fontFamily="@font/poppins_semibold"
-        android:paddingVertical="8dp"
-        android:layout_marginLeft="12.3dp"
-        android:layout_marginRight="12.3dp" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <!-- RecyclerView for comments (Scrollable) -->
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/recycler_view_comments"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
+                android:layout_marginLeft="20dp"
+                android:clipToPadding="false"
+                android:paddingBottom="16dp"/>
+
+            <!-- EditText for writing a comment -->
+            <EditText
+                android:id="@+id/edit_comment"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="Add a comment..."
+                android:layout_marginLeft="20dp"
+                android:layout_marginRight="20dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginBottom="10dp"
+                android:fontFamily="@font/poppins_regular"
+                android:visibility="gone" />
+
+            <!-- Button for publishing the comment -->
+            <Button
+                android:id="@+id/btn_comment"
+                android:layout_width="200dp"
+                android:layout_height="wrap_content"
+                android:background="@drawable/purple_rectangle"
+                android:gravity="center"
+                android:layout_gravity="center"
+                android:includeFontPadding="false"
+                android:text="Leave a comment"
+                android:textColor="#FFFFFFFF"
+                android:textSize="12sp"
+                android:fontFamily="@font/poppins_semibold"
+                android:paddingVertical="8dp"
+                android:layout_marginLeft="12.3dp"
+                android:layout_marginRight="12.3dp"
+                android:layout_marginBottom="65dp"/>
+
+        </LinearLayout>
+    </ScrollView>
 
 </LinearLayout>
+
