--- a/app/src/main/res/layout/poll_item_images.xml
+++ b/app/src/main/res/layout/poll_item_images.xml
@@ -63,6 +63,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:contentDescription="Comment"
+            android:clickable="true"
             android:src="@drawable/comment_btn" />
     </LinearLayout>
 
