--- a/app/src/main/res/layout/post_list.xml
+++ b/app/src/main/res/layout/post_list.xml
@@ -77,7 +77,7 @@
 
             <!-- Edit Button -->
             <Button
-                android:id="@+id/edit_button"
+                android:id="@+id/del_button"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
