--- a/app/src/main/res/drawable/rounded_corner_bg.xml
+++ b/app/src/main/res/drawable/rounded_corner_bg.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="@color/grey"/> <!-- Background color (white in this case) -->
+    <solid android:color="@color/grey"/> 
     <corners android:radius="12dp"/> <!-- Corner radius for the rounded effect -->
     <stroke android:width="1dp" android:color="#DDDDDD"/> <!-- Optional border -->
     <padding
