--- a/app/src/main/res/layout/fragment_view_post.xml
+++ b/app/src/main/res/layout/fragment_view_post.xml
@@ -85,9 +85,23 @@
                 android:maxLines="1"
                 android:text="1w ago"
                 android:textColor="#FF000000"
-                android:textSize="10sp"
+                android:textSize="12sp"
                 android:fontFamily="@font/poppins_light"/>
         </LinearLayout>
+
+        <Button
+            android:id="@+id/report_btn"
+            android:layout_width="60dp"
+            android:layout_height="40dp"
+            android:layout_marginEnd="10dp"
+            android:background="@drawable/delete_button"
+            android:drawableTop="@drawable/flag"
+            android:drawablePadding="5dp"
+            android:gravity="center"
+            android:paddingStart="8dp"
+            android:paddingTop="10dp"
+            android:paddingEnd="8dp" />
+
     </LinearLayout>
 
     <TextView
@@ -157,7 +171,7 @@
         android:maxLines="1"
         android:text="1000 votes"
         android:textColor="#FF000000"
-        android:textSize="11sp"
+        android:textSize="14sp"
         android:fontFamily="@font/poppins_light"/>
 
     <TextView
