--- a/app/src/main/res/layout/poll_item_images.xml
+++ b/app/src/main/res/layout/poll_item_images.xml
@@ -57,14 +57,19 @@
                 android:textSize="12sp" />
         </LinearLayout>
 
-        <!-- Interaction Icon -->
-        <ImageView
-            android:id="@+id/comment_icon"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:contentDescription="Comment"
-            android:clickable="true"
-            android:src="@drawable/comment_btn" />
+        <!-- Report Button -->
+        <Button
+            android:id="@+id/report_btn"
+            android:layout_width="60dp"
+            android:layout_height="40dp"
+            android:drawableTop="@drawable/flag"
+            android:drawablePadding="5dp"
+            android:background="@drawable/delete_button"
+            android:paddingStart="8dp"
+            android:paddingEnd="8dp"
+            android:paddingTop="10dp"
+            android:gravity="center"
+            android:layout_marginEnd="10dp" />
     </LinearLayout>
 
     <!-- Poll Options with Images (Visible with 2 choices and images) -->
